--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,4 @@
-server.port=8888
-
-spring.cloud.config.server.git.uri=https://github.com/KawitJain01/config.git
-#file://${user.home}/Desktop/config
-spring.cloud.config.server.git.clone-on-start=true
-spring.cloud.config.server.git.default-label=main
-
+spring.application.name=a-bootiful-client
+spring.config.import=optional:configserver:http://localhost:8888/
+management.endpoints.web.exposure.include=*
+#spring.profiles.active=native
