--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,26 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>ConfigurationServer</artifactId>
+	<artifactId>ConfigurationClient</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ConfigurationServer</name>
-	<description>Configuration Server Project For Spring Boot</description>
+	<name>ConfigurationClient</name>
+	<description>Configuration Client Project For Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2020.0.1</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-server</artifactId>
+			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 
 		<dependency>
